feat: add search endpoint
- fix not valid query result for files with empty aliases list
- add CORS option into config and middleware
- update openapi for search endpoint
